infra/dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ready-api-dev
  name: ready-api-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ready-api-dev
  template:
    metadata:
      labels:
        app: ready-api-dev
    spec:
      containers:
        - image: ready-api-dev
          name: ready-api-dev
          ports:
            - containerPort: 3000
