infra/dev/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ready-api-dev
  name: ready-api-dev
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: ready-api-dev
  type: NodePort
