infra/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: dev-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ready-api-dev.vervenet.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ready-api-dev
            port:
              number: 3000
