infra/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ready-api-dev.vervenet.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ready-api-dev
            port:
              number: 80
